Add admin book upload and browsing features

--- a/pages/admin/advertising.html
+++ b/pages/admin/advertising.html
@@ -373,6 +373,9 @@
                         <a href="book-approval.html" class="sidebar-menu-item">
                             <i class="fas fa-check-circle"></i> Book Approval
                         </a>
+                        <a href="book-upload.html" class="sidebar-menu-item">
+                            <i class="fas fa-upload"></i> Book Upload
+                        </a>
                         <a
                             href="advertising.html"
                             class="sidebar-menu-item active"
