--- a/pages/admin/book-view.html
+++ b/pages/admin/book-view.html
@@ -218,36 +218,44 @@
 
             <div class="book-details-card">
                 <div class="book-header">
-                    <h2 class="book-title">The Great Gatsby</h2>
-                    <p class="book-author">by F. Scott Fitzgerald</p>
+                    <h2 class="book-title" id="book-title">Loading...</h2>
+                    <p class="book-author" id="book-author">Loading...</p>
                 </div>
 
                 <div class="book-content">
-                    <div class="price-display">৳350</div>
+                    <div class="price-display" id="book-price">Loading...</div>
 
                     <div class="book-info-grid">
                         <div class="info-section">
                             <h3>Basic Information</h3>
                             <div class="info-item">
                                 <span class="info-label">Book ID:</span>
-                                <span class="info-value">#B001</span>
+                                <span class="info-value" id="book-id"
+                                    >Loading...</span
+                                >
                             </div>
                             <div class="info-item">
                                 <span class="info-label">ISBN:</span>
-                                <span class="info-value">978-0743273565</span>
+                                <span class="info-value" id="book-isbn"
+                                    >Loading...</span
+                                >
                             </div>
                             <div class="info-item">
                                 <span class="info-label">Category:</span>
-                                <span class="info-value">Fiction</span>
+                                <span class="info-value" id="book-category"
+                                    >Loading...</span
+                                >
                             </div>
                             <div class="info-item">
                                 <span class="info-label">Condition:</span>
-                                <span class="info-value">Excellent</span>
+                                <span class="info-value" id="book-condition"
+                                    >Loading...</span
+                                >
                             </div>
                             <div class="info-item">
                                 <span class="info-label">Status:</span>
-                                <span class="status-badge status-approved"
-                                    >Approved</span
+                                <span class="status-badge" id="book-status"
+                                    >Loading...</span
                                 >
                             </div>
                         </div>
@@ -256,50 +264,42 @@
                             <h3>Seller Information</h3>
                             <div class="info-item">
                                 <span class="info-label">Seller Name:</span>
-                                <span class="info-value">John Doe</span>
+                                <span class="info-value" id="seller-name"
+                                    >Loading...</span
+                                >
                             </div>
                             <div class="info-item">
                                 <span class="info-label">Seller ID:</span>
-                                <span class="info-value">#U001</span>
+                                <span class="info-value" id="seller-id"
+                                    >Loading...</span
+                                >
                             </div>
                             <div class="info-item">
                                 <span class="info-label">Listed Date:</span>
-                                <span class="info-value">July 15, 2023</span>
+                                <span class="info-value" id="listed-date"
+                                    >Loading...</span
+                                >
                             </div>
                             <div class="info-item">
                                 <span class="info-label">Approval Date:</span>
-                                <span class="info-value">July 16, 2023</span>
+                                <span class="info-value" id="approval-date"
+                                    >Loading...</span
+                                >
                             </div>
                         </div>
                     </div>
 
                     <div class="book-description">
                         <h3>Description</h3>
-                        <div class="description-text">
-                            <p>
-                                This is a classic American novel that explores
-                                themes of decadence, idealism, resistance to
-                                change, social upheaval, and excess. The book is
-                                in excellent condition with minimal wear, clean
-                                pages, and a well-preserved cover. No markings
-                                or highlights inside.
-                            </p>
-                            <p>
-                                The book has been carefully maintained and shows
-                                only slight signs of previous ownership. Perfect
-                                for collectors or readers who appreciate
-                                pristine copies of classic literature.
-                            </p>
+                        <div class="description-text" id="book-description">
+                            <p>Loading...</p>
                         </div>
                     </div>
 
                     <div class="book-images">
                         <h3>Book Images</h3>
-                        <div class="image-grid">
-                            <div class="book-image">Front Cover</div>
-                            <div class="book-image">Back Cover</div>
-                            <div class="book-image">Spine</div>
-                            <div class="book-image">Sample Pages</div>
+                        <div class="image-grid" id="book-images">
+                            <div class="book-image">Loading...</div>
                         </div>
                     </div>
 
@@ -387,9 +387,20 @@
         <!-- Book View specific JavaScript -->
         <script>
             document.addEventListener("DOMContentLoaded", function () {
+                // Get book ID from URL
+                const urlParams = new URLSearchParams(window.location.search);
+                const bookId = urlParams.get("id");
+
+                if (!bookId) {
+                    showNotification("No book ID provided", "error");
+                    return;
+                }
+
+                // Load book data
+                loadBookData(bookId);
+
                 // Delete book functionality
                 const deleteBtn = document.getElementById("delete-book");
-
                 if (deleteBtn) {
                     deleteBtn.addEventListener("click", function () {
                         if (
@@ -397,20 +408,217 @@
                                 "Are you sure you want to delete this book? This action cannot be undone."
                             )
                         ) {
-                            // This will be connected to backend later
-                            showNotification(
-                                "Book deleted successfully!",
-                                "success"
-                            );
-
-                            // Redirect back to book management after a short delay
-                            setTimeout(() => {
-                                window.location.href = "book-management.html";
-                            }, 1500);
+                            deleteBook(bookId);
                         }
                     });
                 }
             });
+
+            // Load book data from backend
+            async function loadBookData(bookId) {
+                try {
+                    const formData = new FormData();
+                    formData.append("action", "get_book_details");
+                    formData.append("book_id", bookId);
+
+                    const response = await fetch(
+                        "../../backend/books/book_manager.php",
+                        {
+                            method: "POST",
+                            body: formData,
+                        }
+                    );
+
+                    const data = await response.json();
+
+                    if (data.success) {
+                        displayBookData(data.data);
+                    } else {
+                        showNotification(
+                            data.message || "Failed to load book data",
+                            "error"
+                        );
+                    }
+                } catch (error) {
+                    console.error("Error loading book data:", error);
+                    showNotification("Error loading book data", "error");
+                }
+            }
+
+            // Display book data in the UI
+            function displayBookData(book) {
+                // Basic info
+                document.getElementById("book-title").textContent = book.title;
+                document.getElementById(
+                    "book-author"
+                ).textContent = `by ${book.author}`;
+                document.getElementById(
+                    "book-price"
+                ).textContent = `৳${book.price}`;
+                document.getElementById("book-id").textContent = `#${book.id}`;
+                document.getElementById("book-isbn").textContent =
+                    book.isbn || "N/A";
+                document.getElementById("book-category").textContent =
+                    book.category_name || "N/A";
+                document.getElementById("book-condition").textContent =
+                    book.book_condition || "N/A";
+
+                // Status badge
+                const statusElement = document.getElementById("book-status");
+                statusElement.textContent = book.status || "N/A";
+                statusElement.className = `status-badge status-${
+                    book.status?.toLowerCase() || "pending"
+                }`;
+
+                // Seller info
+                const firstName = book.first_name || "";
+                const lastName = book.last_name || "";
+                const sellerName =
+                    [firstName, lastName].filter(Boolean).join(" ") || "N/A";
+                const sellerType = book.seller_type || "N/A";
+                const formattedSellerName =
+                    sellerType === "admin"
+                        ? `${sellerName} (Admin)`
+                        : `${sellerName} (Customer)`;
+                document.getElementById("seller-name").textContent =
+                    formattedSellerName;
+                document.getElementById("seller-id").textContent = `#${
+                    book.seller_id || "N/A"
+                }`;
+                document.getElementById("listed-date").textContent =
+                    formatDate(book.created_at) || "N/A";
+                document.getElementById("approval-date").textContent =
+                    book.status === "approved"
+                        ? formatDate(book.updated_at) || "N/A"
+                        : "Pending";
+
+                // Description
+                const descriptionElement =
+                    document.getElementById("book-description");
+                if (book.description) {
+                    descriptionElement.innerHTML = `<p>${book.description}</p>`;
+                } else {
+                    descriptionElement.innerHTML =
+                        "<p>No description available</p>";
+                }
+
+                // Images
+                displayBookImages(book);
+            }
+
+            // Display book images
+            function displayBookImages(book) {
+                const imagesContainer = document.getElementById("book-images");
+                imagesContainer.innerHTML = "";
+
+                if (book.cover_image_path) {
+                    const coverImage = document.createElement("div");
+                    coverImage.className = "book-image";
+                    coverImage.innerHTML = `<img src="../../${book.cover_image_path}" alt="Cover" style="max-width: 100%; height: auto;">`;
+                    imagesContainer.appendChild(coverImage);
+                }
+
+                if (book.additional_images) {
+                    try {
+                        const additionalImages = JSON.parse(
+                            book.additional_images
+                        );
+                        if (Array.isArray(additionalImages)) {
+                            additionalImages.forEach((imagePath) => {
+                                const imageDiv = document.createElement("div");
+                                imageDiv.className = "book-image";
+                                imageDiv.innerHTML = `<img src="../../${imagePath}" alt="Additional" style="max-width: 100%; height: auto;">`;
+                                imagesContainer.appendChild(imageDiv);
+                            });
+                        }
+                    } catch (e) {
+                        console.log("No additional images");
+                    }
+                }
+
+                if (imagesContainer.children.length === 0) {
+                    imagesContainer.innerHTML =
+                        "<div class='book-image'>No images available</div>";
+                }
+            }
+
+            // Delete book
+            async function deleteBook(bookId) {
+                try {
+                    const formData = new FormData();
+                    formData.append("action", "delete_book");
+                    formData.append("book_id", bookId);
+
+                    const response = await fetch(
+                        "../../backend/books/book_manager.php",
+                        {
+                            method: "POST",
+                            body: formData,
+                        }
+                    );
+
+                    const data = await response.json();
+
+                    if (data.success) {
+                        showNotification(data.message, "success");
+                        setTimeout(() => {
+                            window.location.href = "book-management.html";
+                        }, 1500);
+                    } else {
+                        showNotification(data.message, "error");
+                    }
+                } catch (error) {
+                    console.error("Error deleting book:", error);
+                    showNotification("Error deleting book", "error");
+                }
+            }
+
+            // Format date
+            function formatDate(dateString) {
+                if (!dateString) return "N/A";
+                try {
+                    const date = new Date(dateString);
+                    return date.toLocaleDateString("en-US", {
+                        year: "numeric",
+                        month: "long",
+                        day: "numeric",
+                    });
+                } catch (e) {
+                    return dateString;
+                }
+            }
+
+            // Show notification function
+            function showNotification(message, type = "info") {
+                // Create notification element
+                const notification = document.createElement("div");
+                notification.className = `notification ${type}`;
+                notification.textContent = message;
+                notification.style.cssText = `
+                    position: fixed;
+                    top: 20px;
+                    right: 20px;
+                    padding: 15px 20px;
+                    border-radius: 4px;
+                    color: white;
+                    font-weight: 500;
+                    z-index: 1000;
+                    background-color: ${
+                        type === "success"
+                            ? "#27ae60"
+                            : type === "error"
+                            ? "#e74c3c"
+                            : "#3498db"
+                    };
+                `;
+
+                document.body.appendChild(notification);
+
+                // Remove after 3 seconds
+                setTimeout(() => {
+                    notification.remove();
+                }, 3000);
+            }
         </script>
     </body>
 </html>
